Add java, config and setup-env scripts to cli